--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     <div class="media-body"><strong>Característica 3</strong> sobre el estilo.</div>
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg page-scroll" href="#header">Ver obras!</a>
+                            <a class="btn-solid-reg page-scroll" href="#Author">Ver obras!</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -239,7 +239,8 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/author.png" alt="alternative">
+                        <!-- <img class="img-fluid" src="images/author.png" alt="alternative"> -->
+                        <img class="img-fluid" src="images/obra1.bridget.jpg" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
