--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
-                        <h1>Pintando con código</h1>
+                        <h1>PINTANDO CON CÓDIGO</h1>
                         <p class="p-large">Breve, muy breve descripción del taller!</p>
                         <a class="btn-solid-lg" href="#your-link">¡Comencemos!</a>
                     </div> <!-- end of text-container -->
@@ -186,7 +186,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h2>Nombre de pintora 1</h2>
+                            <h2>Bridget Riley</h2>
                             <hr class="hr-heading">
                             <p>Breve descripción de la pintora.</p>
                             <ul class="list-unstyled li-space-lg">
@@ -218,7 +218,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
-                        <h2>Obra 1</h2>
+                        <h2>Movement in squares (1961)</h2>
                         <hr class="hr-heading">
                         <p>Breve descripción de la obra.</p>
                         <ul class="list-unstyled li-space-lg">
@@ -240,7 +240,7 @@
                 <div class="col-lg-7">
                     <div class="image-container">
                         <!-- <img class="img-fluid" src="images/author.png" alt="alternative"> -->
-                        <img class="img-fluid" src="images/obra1.bridget.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/obra1.1.bridget.png" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -253,10 +253,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="image-container">
-                        <!-- <img class="img-fluid" src="images/about.png" alt="alternative"> -->
-                        <iframe allowfullscreen="" frameborder="0" height="480" src="https://snap.berkeley.edu/embed?project=riley movement in squares&amp;user=luis mayorga" width="720"></iframe>
-                    </div> <!-- end of image-container -->
+                    <div class="snap-responsive">
+                        <iframe src="https://snap.berkeley.edu/embed?project=riley movement in squares&amp;user=luis mayorga" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </div> <!-- end of col -->
                 <div class="col-lg-12">
                     <div class="text-container">
