--- a/index.html
+++ b/index.html
@@ -43,41 +43,21 @@
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
 
             <!-- Mobile Menu Toggle Button -->
-            <!--
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-awesome fas fa-bars"></span>
                 <span class="navbar-toggler-awesome fas fa-times"></span>
             </button>
-          -->
+
             <!-- end of mobile menu toggle button -->
-            <!--
+
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="details.html">Details <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="#pintora1">Bridget Riley</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="terms.html">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="privacy.html">Privacy</a>
-                    </li>
-            -->
-                    <!-- Dropdown Menu --> <!--
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Drop</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="details.html">Course Details</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="terms.html">Terms Conditions</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
-                        </div>
-                    </li> -->
-                    <!-- end of dropdown menu -->
-                    <!--
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link page-scroll" href="#pintora2">Vera Molnar</a>
                     </li>
                 </ul>
                 <span class="nav-item social-icons">
@@ -94,7 +74,7 @@
                         </a>
                     </span>
                 </span>
-            </div> -->
+            </div>
         </div>  <!-- end of container -->
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
@@ -173,7 +153,7 @@
     <!-- end of chapters -->
 
     <!-- Pintoras --> <!-- Audience -->
-    <div id="pintora">
+    <div id="pintora1">
   	  <div class="split">
   		<div class="area-1">
   		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
@@ -186,18 +166,18 @@
                               <p>Es probable que las pinturas de Bridget Riley te hagan desconfiar de tus ojos. Porque las líneas, colores y formas en sus cuadros cobran vida, se estiran, tiemblan y bailan frente a ti. </p>
                               <p>De niña, a Bridget Riley le gustaba explorar las cuevas y las playas de su pueblo en Inglaterra. Disfrutaba ver el movimiento del agua, de las nubes o de las figuras de luz que se reflejaban en las piedras. Al crecer, logró llevar ese movimiento a la pintura. Experimentó con patrones de líneas, cuadrados, círculos y espirales hasta que creó ilusiones ópticas, y logró que las personas sintiéramos que dentro de un cuadro inmóvil está ocurriendo una revolución.</p>
                               <!--<a class="btn-solid-reg page-scroll" href="#Author">Ver obras!</a>-->
-                              <a class="btn-solid-reg page-scroll" href="#obra">¡Ver obras!</a>
+                              <a class="btn-solid-reg page-scroll" href="#obra1">¡Ver obras!</a>
                           </div> <!-- end of text-container -->
                       </div> <!-- end of col -->
                   </div> <!-- end of row -->
               </div> <!-- end of container -->
   		</div> <!-- end of area-2 -->
       </div> <!-- end of split -->
-    </div> <!-- end of split -->
+    </div> <!-- end of id=pintora1 -->
     <!-- end of audience -->
 
     <!-- Obras --> <!-- Author -->
-    <div id="obra">
+    <div id="obra1">
       <!-- Obra 1 -->
       <div class="basic-4">
           <div class="container">
@@ -235,7 +215,7 @@
                           <hr class="hr-heading">
                           <p>"Esta obra es parte de una nueva olas de trabajos de Bridget, inspirada en los pigmentos y colores de la naturaleza que experimentó en sus viajes a Egipto y la India en los años 80."</p>
                       </div> <!-- end of text-container -->
-                      <a class="btn-solid-reg page-scroll" href="#snap">¡Vamos a crear!</a>
+                      <a class="btn-solid-reg page-scroll" href="#snap1">¡Vamos a crear!</a>
                   </div> <!-- end of col -->
 
               </div> <!-- end of row -->
@@ -243,11 +223,11 @@
 
       </div> <!-- end of basic-4 -->
 
-    </div> <!-- end of id=obra -->
+    </div> <!-- end of id=obra1 -->
     <!-- end of author -->
 
     <!-- Snap! --> <!-- About -->
-    <div id="snap">
+    <div id="snap1">
       <div class="counter">
           <div class="container">
               <div class="row">
@@ -266,94 +246,195 @@
                   </div> <!-- end of col -->
                   <div class="col-lg-12">
                       <div class="text-container">
-
-                          <!-- Counter -->
-                          <!--
-                          <div id="counter">
-                              <div class="cell">
-                                  <div class="counter-value number-count" data-count="231">1</div>
-                                  <p class="counter-info">Happy Users</p>
-                              </div>
-                              <div class="cell">
-                                  <div class="counter-value number-count" data-count="385">1</div>
-                                  <p class="counter-info">Posted Tips</p>
-                              </div>
-                              <div class="cell">
-                                  <div class="counter-value number-count" data-count="159">1</div>
-                                  <p class="counter-info">Good Reviews</p>
-                              </div>
-                              <div class="cell">
-                                  <div class="counter-value number-count" data-count="127">1</div>
-                                  <p class="counter-info">Case Studies</p>
-                              </div>
-                          </div>
-                          -->
-                          <!-- end of counter -->
                           <br></br>
                           <h4>Dale click a la banderita verde, mueve los animales y empieza a crear obras... ¡al estilo de Bridget!</h4>
+                          <a class="btn-solid-reg page-scroll" href="#links1">¿Quieres saber más?</a>
+                      </div> <!-- end of text-container -->
+                  </div> <!-- end of col -->
+              </div> <!-- end of row -->
+          </div> <!-- end of container -->
+      </div> <!-- end of counter -->
+    </div> <!-- end of id=snap1 -->
+    <!-- end of about -->
+
+    <!-- Details -->
+    <div id="links1">
+      <div class="basic-3">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-7">
+                      <div class="image-container">
+                          <img class="img-fluid" src="images/details.png" alt="alternative">
+                      </div> <!-- end of image-container -->
+                  </div> <!-- end of col -->
+                  <div class="col-lg-5">
+                      <div class="text-container">
+                          <h2>¡Continúa aprendiendo!</h2>
+                          <hr class="hr-heading">
+                          <p>Busca más de sus pinturas y diviértete con el baile en tus ojos. Solo ten cuidado, no vaya a ser que te haga tambalear y dar giros por el suelo.</p>
+                          <a class="btn-solid-reg" href="http://www.op-art.co.uk/bridget-riley/" target="_blank">Lee la historia de Bridget Riley</a>
+                          <br></br>
+                          <a class="btn-solid-reg" href="https://www.tate.org.uk/kids/explore/who-is/who-bridget-riley" target="_blank">Aprende más sobre su trabajo</a>
+                          <br></br>
+                          <a class="btn-solid-reg" href="https://www.youtube.com/watch?v=k0WsMInlIl8" target="_blank">Haz esta divertida actividad</a>
+                          <br></br><br></br>
+                      </div> <!-- end of text-container -->
+                  </div> <!-- end of col -->
+              </div> <!-- end of row -->
+          </div> <!-- end of container -->
+      </div> <!-- end of basic-3 -->
+    </div> <!-- end of id=links1 -->
+    <!-- end of details -->
+
+    <!-- Pintoras --> <!-- Audience -->
+    <div id="pintora2">
+  	  <div class="split">
+  		<div class="area-4">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-12">
+                          <div class="text-container">
+                              <h2>Vera Molnar</h2>
+                              <hr class="hr-heading">
+                              <p>A la pintora Vera Molnar le encantan los cuadrados. A los doce años comenzó a pintar árboles y ninfas, pero poco a poco descubrió su amor por las figuras geométricas. Descubrió que repitiendo, deformando o cambiando su posición, podía transformar un simple círculo o una línea en algo más complejo, en algo divertido o incluso en algo que puede parecer loco.</p>
+                              <p>Para lograrlo a Vera Molnar se le ocurrió una técnica muy especial: imaginar que tenía una computadora y que con ella podía repetir sus pinturas todas las veces que quisiera. Y aunque lo hacía a mano, Vera inventaba una serie de pasos para crear sus imágenes y repetía estos pasos metiendo solo pequeños cambios, como lo haría una computadora.</p>
+                              <p>Eso fue hace más de 60 años y Vera Molnar solo podía imaginar tener una computadora. Pues eran máquinas enormes y caras. Además, para comunicarse con ellas las personas debían conocer un lenguaje especial.</p>
+                              <!--<a class="btn-solid-reg page-scroll" href="#Author">Ver obras!</a>-->
+                              <!-- <a class="btn-solid-reg page-scroll" href="#obra2">¡Ver obras!</a> -->
+                          </div> <!-- end of text-container -->
+                      </div> <!-- end of col -->
+                  </div> <!-- end of row -->
+              </div> <!-- end of container -->
+  		</div><div class="area-3"></div> <!-- end of area-3 -->
+      </div> <!-- end of split -->
+      <div class="split">
+  		<div class="area-4">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-12">
+                          <div class="text-container">
+                              <p>Pero unos años más tarde, en 1968, un amigo le prestó una computadora de verdad. De hecho fueron dos computadoras, a una, Vera Molnar le dio las instrucciones para elaborar la pintura y la otra computadora la imprimió. Las cosas no eran como ahora, que una sola computadora hace mil cosas distintas.</p>
+                              <p>Así, Vera Molnar se convirtió en una de las primeras personas en el mundo en usar una computadora para hacer arte.</p>
+                              <a class="btn-solid-reg page-scroll" href="#obra2">¡Ver obras!</a>
+                          </div> <!-- end of text-container -->
+                      </div> <!-- end of col -->
+                  </div> <!-- end of row -->
+              </div> <!-- end of container -->
+  		</div><div class="area-3-1"></div> <!-- end of area-3 -->
+      </div> <!-- end of split -->
+    </div> <!-- end of id=pintora2 -->
+    <!-- end of audience -->
+
+    <!-- Obras --> <!-- Author -->
+    <div id="obra2">
+      <!-- Obra 2 -->
+      <div class="basic-4">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-7">
+                      <div class="image-container">
+                          <!-- <img class="img-fluid" src="images/author.png" alt="alternative"> -->
+                          <img class="img-fluid" src="images/obra2.1.vera.png" alt="alternative">
+                      </div> <!-- end of image-container -->
+                  </div> <!-- end of col -->
+                  <div class="col-lg-5">
+                      <div class="text-container">
+                          <h2>Interruptions (1969)</h2>
+                          <hr class="hr-heading">
+                          <p>"Esta obra es parte de una nueva olas de trabajos de Bridget, inspirada en los pigmentos y colores de la naturaleza que experimentó en sus viajes a Egipto y la India en los años 80."</p>
+                      </div> <!-- end of text-container -->
+
+                  </div> <!-- end of col -->
+
+              </div> <!-- end of row -->
+          </div> <!-- end of container -->
+
+      </div> <!-- end of basic-4 -->
+
+      <!-- Obra 1 -->
+      <div class="basic-4">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-5">
+                      <div class="text-container">
+                          <h2>(Dés)Ordres (1974)</h2>
+                          <hr class="hr-heading">
+                          <p>""</p>
+                      </div> <!-- end of text-container -->
+                      <a class="btn-solid-reg page-scroll" href="#snap2">¡Vamos a crear!</a>
+                  </div> <!-- end of col -->
+                  <div class="col-lg-7">
+                      <div class="image-container">
+                          <!-- <img class="img-fluid" src="images/author.png" alt="alternative"> -->
+                          <img class="img-fluid" src="images/obra1.1.vera.png" alt="alternative">
+                      </div> <!-- end of image-container -->
+                  </div> <!-- end of col -->
+              </div> <!-- end of row -->
+          </div> <!-- end of container -->
+      </div> <!-- end of basic-4 -->
+
+    </div> <!-- end of id=obra2 -->
+    <!-- end of author -->
+
+    <!-- Snap! --> <!-- About -->
+    <div id="snap2">
+      <div class="counter">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12">
+                      <div class="text-container">
+                        <!-- Aquí estoy forzando el h2 a ser color blanco. Arreglar eso después -->
+                          <h2 style="color:white;">¡Interactuemos con las obras de Vera Molnar!</h2>
+                          <br></br>
+                      </div> <!-- end of text-container -->
+                  </div> <!-- end of col -->
+                  <div class="col-lg-12">
+                      <div class="snap-responsive">
+                          <iframe src="https://snap.berkeley.edu/embed?project=Molnar 64 Punkte&user=luis mayorga" frameborder="0" allowfullscreen></iframe>
+                          <br></br>
+                      </div>
+                  </div> <!-- end of col -->
+                  <div class="col-lg-12">
+                      <div class="text-container">
+                          <br></br>
+                          <h4>Dale click a la banderita verde, mueve los objetos y empieza a crear obras... ¡al estilo de Vera!</h4>
 
                       </div> <!-- end of text-container -->
                   </div> <!-- end of col -->
               </div> <!-- end of row -->
           </div> <!-- end of container -->
       </div> <!-- end of counter -->
-    </div> <!-- end of id=snap -->
-      <!-- end of about -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div> <!-- end of id=snap2 -->
+    <!-- end of about -->
 
     <!-- Details -->
-    <div class="basic-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/details.png" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-5">
-                    <div class="text-container">
-                        <h2>¡Continúa investigando!</h2>
-                        <hr class="hr-heading">
-                        <p>Busca más de sus pinturas y diviértete con el baile en tus ojos. Solo ten cuidado, no vaya a ser que te haga tambalear y dar giros por el suelo.</p>
-                        <a class="btn-solid-reg" href="http://www.op-art.co.uk/bridget-riley/" target="_blank">Lee la historia de Bridget Riley</a>
-                        <br></br>
-                        <a class="btn-solid-reg" href="https://www.tate.org.uk/kids/explore/who-is/who-bridget-riley" target="_blank">Aprende más sobre su trabajo</a>
-                        <br></br>
-                        <a class="btn-solid-reg" href="https://www.youtube.com/watch?v=k0WsMInlIl8" target="_blank">Haz esta divertida actividad</a>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-3 -->
+    <div id="links2">
+      <div class="basic-3">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-5">
+                      <div class="text-container">
+                          <h2>¡Continúa aprendiendo!</h2>
+                          <hr class="hr-heading">
+                          <p>Vera Molnar, a sus 96 años de edad sigue pintando y cree que las computadoras nos dan la posibilidad de acercarnos a crear lo que tenemos en la imaginación. Anímate a intentarlo.</p>
+                          <a class="btn-solid-reg" href="http://www.op-art.co.uk/bridget-riley/" target="_blank">Lee la historia de Bridget Riley</a>
+                          <br></br>
+                          <a class="btn-solid-reg" href="https://www.tate.org.uk/kids/explore/who-is/who-bridget-riley" target="_blank">Aprende más sobre su trabajo</a>
+                          <br></br>
+                          <a class="btn-solid-reg" href="https://www.youtube.com/watch?v=k0WsMInlIl8" target="_blank">Haz esta divertida actividad</a>
+                          <br></br><br></br>
+                      </div> <!-- end of text-container -->
+                  </div> <!-- end of col -->
+                  <div class="col-lg-7">
+                      <div class="image-container">
+                          <img class="img-fluid" src="images/details.png" alt="alternative">
+                      </div> <!-- end of image-container -->
+                  </div> <!-- end of col -->
+              </div> <!-- end of row -->
+          </div> <!-- end of container -->
+      </div> <!-- end of basic-3 -->
+    </div> <!-- end of id=links -->
     <!-- end of details -->
-
-
-
-
-
-
-
-
-
-
 
     <!-- Partners -->
     <!--
