vera molnar final para taller

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                       <div class="text-container">
                           <h2>Interruptions (1969)</h2>
                           <hr class="hr-heading">
-                          <p>"Esta obra es parte de una nueva olas de trabajos de Bridget, inspirada en los pigmentos y colores de la naturaleza que experimentó en sus viajes a Egipto y la India en los años 80."</p>
+                          <p></p>
                       </div> <!-- end of text-container -->
 
                   </div> <!-- end of col -->
@@ -359,7 +359,7 @@
                       <div class="text-container">
                           <h2>(Dés)Ordres (1974)</h2>
                           <hr class="hr-heading">
-                          <p>""</p>
+                          <p></p>
                       </div> <!-- end of text-container -->
                       <a class="btn-solid-reg page-scroll" href="#snap2">¡Vamos a crear!</a>
                   </div> <!-- end of col -->
@@ -417,11 +417,9 @@
                           <h2>¡Continúa aprendiendo!</h2>
                           <hr class="hr-heading">
                           <p>Vera Molnar, a sus 96 años de edad sigue pintando y cree que las computadoras nos dan la posibilidad de acercarnos a crear lo que tenemos en la imaginación. Anímate a intentarlo.</p>
-                          <a class="btn-solid-reg" href="http://www.op-art.co.uk/bridget-riley/" target="_blank">Lee la historia de Bridget Riley</a>
+                          <a class="btn-solid-reg" href="https://medium.com/@xuetingzhang313/re-code-vera-molnárs-interruptions-b6dc9765eae5" target="_blank">Proceso para re-codificar una obra de Vera</a>
                           <br></br>
-                          <a class="btn-solid-reg" href="https://www.tate.org.uk/kids/explore/who-is/who-bridget-riley" target="_blank">Aprende más sobre su trabajo</a>
-                          <br></br>
-                          <a class="btn-solid-reg" href="https://www.youtube.com/watch?v=k0WsMInlIl8" target="_blank">Haz esta divertida actividad</a>
+                          <a class="btn-solid-reg" href="https://elartedigital.wordpress.com/artistas/vera-molnar/" target="_blank">Aprende más sobre su trabajo</a>
                           <br></br><br></br>
                       </div> <!-- end of text-container -->
                   </div> <!-- end of col -->
